--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 name: Rare Book Cataloging Training
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/time-machine@v0.2.0
+plugins:
+- jekyll-remote-theme
